Fix background colour on narrow two column block

--- a/themes/default/src/scss/elements/_element-narrow-two-column.scss
+++ b/themes/default/src/scss/elements/_element-narrow-two-column.scss
@@ -2,6 +2,10 @@
 ---------------------------------------------------------------------------------- */
 .element-narrow-two-column {
 	padding: 50px 0;
+
+	&--grey {
+		background-color: $grey;
+	}
 }
 
 @include respond(768px) {
